ginkgo: XiaomiParts: Add support for LCD HBM and CABC
 * added preferences and qs tiles
 * enabled cabc by default
 * addressed sepolicy denials
 * kanged hbm icon from realme parts
 * cabc icon by wstxda

Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Aryaman Srivastava <aryamansrivastava895@gmail.com>

--- a/rootdir/etc/init.xiaomi_parts.rc
+++ b/rootdir/etc/init.xiaomi_parts.rc
@@ -26,3 +26,10 @@ on boot
 # Vibration
     chown system system /sys/class/leds/vibrator/vtg_level
     chmod 0660 /sys/class/leds/vibrator/vtg_level
+
+# CABC
+on property:persist.lcd.hbm_mode=*
+    write /sys/devices/platform/soc/soc:qcom,dsi-display/hbm ${persist.lcd.hbm_mode}
+
+on property:persist.lcd.cabc_mode=*
+    write /sys/devices/platform/soc/soc:qcom,dsi-display/cabc ${persist.lcd.cabc_mode}
